--- a/app/src/main/res/layout/recent_recy_item.xml
+++ b/app/src/main/res/layout/recent_recy_item.xml
@@ -6,11 +6,15 @@
     android:layout_height="wrap_content"
     android:background="@color/Background"
     android:padding="8dp"
-    tools:layout_editor_absoluteY="81dp">
+    tools:layout_editor_absoluteY="81dp"
+    android:id="@+id/cardViewlayout">
 
     <FrameLayout
+        android:id="@+id/framcard"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:background="?attr/selectableItemBackground"
+        android:clickable="true">
 
         <android.support.v7.widget.CardView
             android:id="@+id/cardView"
@@ -22,8 +26,11 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <android.support.constraint.ConstraintLayout
+                android:id="@+id/conscard"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:background="?attr/selectableItemBackground"
+                android:clickable="true">
 
                 <ImageView
                     android:id="@+id/artist_imageView"
@@ -52,7 +59,9 @@
                     app:layout_constraintEnd_toStartOf="@+id/det_img"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/song_txtv"
-                    app:layout_constraintVertical_bias="0.0" />
+                    app:layout_constraintVertical_bias="0.0"
+                    android:layout_marginRight="8dp"
+                    tools:ignore="RtlCompat" />
 
                 <TextView
                     android:id="@+id/song_txtv"
@@ -70,7 +79,10 @@
                     app:layout_constraintEnd_toStartOf="@+id/fav_img"
                     app:layout_constraintHorizontal_bias="0.156"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/artist_imageView" />
+                    app:layout_constraintTop_toBottomOf="@+id/artist_imageView"
+                    android:layout_marginRight="8dp"
+                    android:layout_marginLeft="4dp"
+                    tools:ignore="RtlCompat" />
 
                 <ImageButton
                     android:id="@+id/fav_img"
@@ -85,7 +97,8 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/artist_imageView"
                     app:layout_constraintVertical_bias="1.0"
-                    app:srcCompat="@drawable/ic_not_fave" />
+                    app:srcCompat="@drawable/ic_not_fave"
+                    android:layout_marginRight="4dp" />
 
                 <ImageButton
                     android:id="@+id/det_img"
@@ -98,7 +111,8 @@
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/fav_img"
-                    app:srcCompat="@drawable/ic_details" />
+                    app:srcCompat="@drawable/ic_details"
+                    android:layout_marginRight="4dp" />
             </android.support.constraint.ConstraintLayout>
 
         </android.support.v7.widget.CardView>
