--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="indicatorColor">#644d606e</color>
     <color name="Tabbackground">#d82d4059</color>
     <color name="Background">#572d4059</color>
+    <color name="btn_more">#2c526b</color>
 </resources>
