--- a/app/src/main/res/layout/recent_recy_item.xml
+++ b/app/src/main/res/layout/recent_recy_item.xml
@@ -37,7 +37,6 @@
                     android:layout_width="190dp"
                     android:layout_height="200dp"
                     android:scaleType="fitXY"
-                    android:src="@drawable/omidnb"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
@@ -113,6 +112,24 @@
                     app:layout_constraintTop_toBottomOf="@+id/fav_img"
                     app:srcCompat="@drawable/ic_details"
                     android:layout_marginRight="4dp" />
+
+                <TextView
+                    android:id="@+id/tap_image"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="16dp"
+                    android:layout_marginStart="16dp"
+                    android:background="@drawable/below_shadow"
+                    android:foreground="@drawable/above_shadow"
+                    android:paddingBottom="5dp"
+                    android:paddingTop="5dp"
+                    android:text="Tap for Image"
+                    android:textAlignment="center"
+                    android:textSize="16sp"
+                    app:layout_constraintBottom_toBottomOf="@+id/artist_imageView"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="@+id/artist_imageView"
+                    app:layout_constraintTop_toTopOf="@+id/artist_imageView" />
             </android.support.constraint.ConstraintLayout>
 
         </android.support.v7.widget.CardView>
